--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,9 +1,9 @@
 ############################
 ############################
-## Release GitHub Actions ##
+## Compile GitHub Actions ##
 ############################
 ############################
-name: Create Release
+name: Create PDFs
 
 #
 # Documentation:
@@ -15,10 +15,13 @@ name: Create Release
 # https://github.com/marketplace/actions/github-action-for-latex
 #
 
-#############################
-# Start the job on all push #
-#############################
-on: [push]
+################################
+# Start the job on push to dev #
+################################
+on:
+  push:
+    branches:
+      - dev
 
 ###############
 # Set the Job #
@@ -26,7 +29,7 @@ on: [push]
 jobs:
   build_latex:
     # Name the Job
-    name: Create Release
+    name: Compile PDFs
     # Set the agent to run on
     runs-on: ubuntu-latest
 
@@ -52,17 +55,20 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: src/set.tex
+          root_file: |
+            src/ascii-donut.tex
+            src/connectfour.tex
+            src/set.tex
           pre_compile: "tex acrotex/acrotex.ins"
         env:
           TEXINPUTS: ".:./acrotex//:"
       ###################
       # Push pdf commit #
       ###################
-      # - name: Commit compiled pdfs
-      #   run: |
-      #     mv set.pdf pdf/set.pdf
-      #     git config --global user.name 'rwarnking'
-      #     git config --global user.email 'rwarnking@users.noreply.github.com'
-      #     git commit -am "Automated commit: Add compiled pdfs"
-      #     git push
+      - name: Commit compiled pdfs
+        run: |
+          mv *.pdf pdf/
+          git config --global user.name 'rwarnking'
+          git config --global user.email 'rwarnking@users.noreply.github.com'
+        # git commit -am "Automated commit: Add compiled pdfs"
+        # git push
