--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,6 +100,19 @@ jobs:
       - name: 'Get Previous tag'
         id: previoustag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
+      # Check if changelog file exists
+      - name: Check file existence
+        id: check_files
+        uses: andstor/file-existence-action@v1
+        with:
+          files: changelogs/${{ steps.previoustag.outputs.tag }}.md
+      # If not create a dummy file
+      - name: Create if file does not exist
+        if: steps.check_files.outputs.files_exists == 'false'
+        uses: "finnp/create-file-action@master"
+        env:
+          FILE_NAME: changelogs/${{ steps.previoustag.outputs.tag }}.md
+          FILE_DATA: "No Changelog present for version ${{ steps.previoustag.outputs.tag }}!"
       # Create release
       - name: Create release
         id: create_release
@@ -109,6 +122,7 @@ jobs:
         with:
           tag_name: ${{ steps.previoustag.outputs.tag }}
           release_name: Release ${{ steps.previoustag.outputs.tag }}
+          body_path: changelogs/${{ steps.previoustag.outputs.tag }}.md
           draft: false
           prerelease: false
       # Setup URL
@@ -134,11 +148,9 @@ jobs:
         uses: actions/checkout@v2
       # Zip files
       - name: Zip files
-        uses: papeloto/action-zip@v1
+        uses: montudor/action-zip@v1
         with:
-          files: pdf/
-          recursive: true
-          dest: /pdf/pdfs.zip
+          args: zip -qq -r pdf/pdf.zip pdf
       # Upload
       - name: Upload
         uses: actions/upload-release-asset@v1.0.1
